[package]
name = "generator-manager"
version = "0.1.2"
edition = "2021"
authors = ["Myles Empty Best"]

[dependencies]
lci-gateway = "0.8.1"
env_logger = "0.8.4"
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4.0"
prowl = "0.1.1"
rumqttc = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
