[package]
name = "generator-manager"
version = "0.3.0"
edition = "2021"
authors = ["Myles Empty Best"]

[dependencies]
lci-gateway = "0.9.0"
env_logger = "0.8.4"
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4.0"
prowl = "0.2.2"
rumqttc = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.33"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
derive-getters = "0.2.0"
ctrlc = "3.2.3"
